--- a/furni-1.0.0/index.html
+++ b/furni-1.0.0/index.html
@@ -73,7 +73,7 @@
 							<div class="hero-img-wrap">
 								<img src="images/couch.png" class="img-fluid">
 							</div>
-						</div>
+						</div> 	
 					</div>
 				</div>
 			</div>
@@ -469,7 +469,10 @@
 						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
 
 						<ul class="list-unstyled custom-social">
-							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+							<li>< href="#"><span class="fa fa-brands fa-facebook-f"></span></
+								
+								
+								a></li>
 							<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
 							<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
 							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
