--- a/furni-1.0.0/index.html
+++ b/furni-1.0.0/index.html
@@ -21,7 +21,7 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+		<title>Josep apruebanos porfa </title>
 	</head>
 
 	<body>
@@ -39,13 +39,13 @@
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
 						<li class="nav-item active">
-							<a class="nav-link" href="index.html">Home</a>
+							<a class="nav-link" href="index.html">Casa</a>
 						</li>
-						<li><a class="nav-link" href="./HTML/shop.html">Shop</a></li>
-						<li><a class="nav-link" href="./HTML/about.html">About us</a></li>
-						<li><a class="nav-link" href="./HTML/services.html">Services</a></li>
-						<li><a class="nav-link" href="./HTML/blog.html">Blog</a></li>
-						<li><a class="nav-link" href="./HTML/contact.html">Contact us</a></li>
+						<li><a class="nav-link" href="./HTML/shop.html">Tienda</a></li>
+						<li><a class="nav-link" href="./HTML/about.html">Sobre nosotros</a></li>
+						<li><a class="nav-link" href="./HTML/services.html">Servicios</a></li>
+						<li><a class="nav-link" href="./HTML/blog.html">Blogs</a></li>
+						<li><a class="nav-link" href="./HTML/contact.html">Contacta</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
